Changed one element arraylist to list